Avances en los cambios al capitulo 2 (#35)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -6,5 +6,9 @@
 \bibitem{Hausdorff1919} Hausdorff, F. \textit{Dimension und ausseres Mass.} Mathematische Annalen 79 (1919): 157-179. \url{http://eudml.org/doc/158784}.
 \bibitem{Hurewicz-Wallman}Hurewicz, W.; Wallman, H. (1948). \textit{Dimension Theory}. Princeton University Press.
 \bibitem{Moran}Moran, P.A. (1946). \textit{Additive functions of intervals and Hausdorff measure}. In \textit{Mathematical Proceedings of the Cambridge Philosophical Society} (Vol. 42, No. 1, pp. 15-23). Cambridge University Press.
+\bibitem{Apuntes-AMI-Paya} Payá, R (2008). \textit{Apuntes de Análisis Matemático I}...
+
+\bibitem{Ostrowski} Ostrowski, A.M. (1973). \textit{Solution of equations in Euclidean and Banach spaces.} (3rd ed.). Academic Press.
+
 
 \end{thebibliography}
