Cambios en la estructura del capítulo 2 (#35)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -7,8 +7,8 @@
 \bibitem{Hurewicz-Wallman}Hurewicz, W.; Wallman, H. (1948). \textit{Dimension Theory}. Princeton University Press.
 \bibitem{Moran}Moran, P.A. (1946). \textit{Additive functions of intervals and Hausdorff measure}. In \textit{Mathematical Proceedings of the Cambridge Philosophical Society} (Vol. 42, No. 1, pp. 15-23). Cambridge University Press.
 \bibitem{Apuntes-AMI-Paya} Payá, R (2008). \textit{Apuntes de Análisis Matemático I}...
-
 \bibitem{Ostrowski} Ostrowski, A.M. (1973). \textit{Solution of equations in Euclidean and Banach spaces.} (3rd ed.). Academic Press.
+\bibitem{Atkinson} Atkinson, K; Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework} (3rd ed. 2009). Springer New York. \url{https://doi.org/10.1007/978-1-4419-0458-4}
 
 
 \end{thebibliography}
