--- a/memoria/tex/capitulos/capitulo-2.tex
+++ b/memoria/tex/capitulos/capitulo-2.tex
@@ -47,6 +47,7 @@ Fijémonos que en el ejemplo anterior si en lugar de tomar $z_0=0.9$ hubiésemos
 Nos interesa particularmente saber qué sucesiones de iteradas convergen y a qué elemento convergen. En este sentido \textit{Stephan Banach} demostró uno de los resultados más útiles y vigentes del análisis funcional:
 
 \begin{teorema}[Punto fijo de Banach]
+    \label{th:punto-fijo}
     Sea $X$ un espacio métrico completo y $f:X\longrightarrow X$ una aplicación contractiva. Entonces $f$ tiene un único punto fijo. Además, la sucesión de iteradas $\{f^n(x_0)\}$ converge a dicho punto fijo para cualquier $x_0\in X$. 
 \end{teorema}
 \begin{proof}
@@ -99,20 +100,19 @@ Y a partir de la longitud de la lista que nos devuelve \verb|FixedPointList|, es
 
 \section{El método de Newton y cuencas de atracción}
 
-La iteración es la base de muchos métodos numéricos, entre los que en este caso destacamos el `método de Newton', el cual fue inicialmente descrito por \textit{Isaac Newton} en su libro \textit{De analysi per aequationes numero terminorum infinitas}. Este es un procedimiento muy útil y utilizado en la resolución numérica de ecuaciones, tratando buscar con cierta precisión el punto en el que se anula una función $f:\R\longrightarrow\R$, aunque gracias al trabajo de \textit{Arthur Cayley} sabemos que es posible generalizarlo a los números complejos.
+Gracias a la iteración y al estudio de la convergencia de las sucesiones que definen las órbitas, podemos definir muchos métodos numéricos que nos ayuden a resolver numéricamente problemas que de forma teórica o analítica serían difíciles de abordar. Entre estos está el conocido \textbf{método de Newton}. Este es un procedimiento iterativo que nos permite adivinar con cierta precisión donde se anula una función derivable (al menos en un entorno de la raíz), pudiendo así utilizarlo como herramienta para la resolución de ecuaciones. Existen varias y distintas versiones del método de Newton, siendo la más sencilla la que busca las raíces de una función real de variable real $f:\R\longrightarrow\R$, conociéndose también en este caso como \textit{método de Newton-Raphson}. Además, hay una generalización para aplicaciones $f:\R^n\longrightarrow\R^n$, la cual se apoya en la inversa del operador diferencial. Sin embargo, nosotros estamos trabajando con funciones complejas $f:\C\longrightarrow\C$, que aunque $\C$ y $\R^2$ sean isomorfos, la dinámica es distinta, pues si la función compleja es suficientemente buena, podemos usar su derivada $f'(z)$ y no el operador diferencial. 
 
-Recordemos que dada una ecuación $f(z)=0$ para cierta función compleja y derivable $f:\C\longrightarrow\C$, el método de Newton itera la función
+Recordemos que dada una ecuación $f(z)=0$ para cierta función compleja y analítica $f:\C\longrightarrow\C$, el método de Newton itera la función
 \begin{equation}
     \label{eq:metodo-Newton}
     N_f(z)=z-\frac{f(z)}{f'(z)}
 \end{equation} 
-comenzando por un punto $z_0$ cercano a la raíz. Es decir, calcula la sucesión $\{z_n\}$ definida como $z_{n+1}=N_f(z_n) \ \forall n\in\N$, la cual converge a un punto $a\in\C$ que verifica $f(a)=0$.
+comenzando por un punto $z_0$ cercano a la raíz. Es decir, calcula la sucesión $\{z_n\}$ definida como $z_{n+1}=N_f(z_n) \ \forall n\in\N$, la cual aplicando el teorema \ref{th:punto-fijo} podemos deducir que converge a un punto $a\in\C$ que verifica $f(a)=0$ siempre que $f'(a)\not= 0$. Para mayor detalle acerca de la convergencia local ver \cite[Capítulo 7]{Ostrowski} y \cite[Sección 5.4]{Atkinson}.
 
 Sin embargo, en muchas ecuaciones, comenzando por las polinómicas de grado mayor que 1, existen varias soluciones distintas, pero el método de Newton converge sólo a una de ellas, dependiendo de qué $z_0$ fijemos. Nuestro objetivo ahora se sitúa en discernir, para cada punto $z_0$ del plano, a qué solución de la ecuación $f(z)=0$ converge la sucesión $\{z_n\}$ dada por el método de Newton utilizando a $z_0$ como semilla. En las siguientes secciones veremos algunos ejemplos de esta distinción y su utilidad, llegando a las primeras imágenes fractales generadas por iteración.
 
-\subsection{Caso $z^2-1$}
-\label{subsection:cuencas-1}
-
+\begin{ejemplo}
+\label{ejemplo:cuencas-1}
 Consideramos la función compleja $f:\C\longrightarrow\C$ dada por $f(z)=z^2-1$, la cual tiene dos raíces: $1$ y $-1$, las dos raíces cuadradas de 1. Una forma sencilla de comprobar a qué raíz converge cada sucesión utilizando como semilla cada $z_0\in\C$ es asociando un color a cada punto del plano dependiendo de la raíz a la que converja y pidiendo a \textit{Mathematica} que coloree el plano complejo siguiendo este criterio.
 
 \begin{verbatim}
@@ -132,55 +132,64 @@ In[]:= DensityPlot[newtonArgumento[x + I*y], {x, -2, 2}, {y, -2, 2},
     \label{fig:cuencas-1}
 \end{figure}
 
-Produciendo como resultado la imagen \ref{fig:cuencas-1}. La forma de deducir a qué raíz converge cada sucesión consiste en evaluar los argumentos de los valores a los que se acerca la sucesión. Como podemos ver, y teniendo en cuenta que la imagen solo grafica el intervalo $[-2,2]\times[-2,2]$ y un número finito de puntos\footnote{El número de puntos que se grafica se puede parametrizar con el argumento opcional ``PlotPoints'' de las funciones ``Plot''. A mayor valor mayor calidad de imagen y resolución, pero mayor tiempo de ejecución.} la sucesión cuya semilla es un punto perteneciente al semiplano abierto de la derecha converge a la raíz $1$. Por otro lado, si la sucesión comienza con un complejo del semiplano abierto de la izquierda, entonces esta converge a la raíz $-1$. Apoyándonos en este ejemplo, definimos el siguiente concepto.
+Produciendo como resultado la imagen \ref{fig:cuencas-1}. La forma de deducir a qué raíz converge cada sucesión consiste en evaluar los argumentos de los valores a los que se acerca la misma. Como podemos ver, y teniendo en cuenta que la imagen solo grafica el intervalo $[-2,2]\times[-2,2]$ y un número finito de puntos\footnote{El número de puntos que se grafica se puede parametrizar con el argumento opcional ``PlotPoints'' de las funciones ``Plot''. A mayor valor mayor calidad de imagen y resolución, pero mayor tiempo de ejecución.} la sucesión cuya semilla es un punto perteneciente al semiplano abierto de la derecha converge a la raíz $1$. Por otro lado, si la sucesión comienza con un complejo del semiplano abierto de la izquierda, entonces esta converge a la raíz $-1$. Apoyándonos en este ejemplo, definimos el siguiente concepto.
+\end{ejemplo}
+
 
 \begin{definicion}[Cuenca de atracción]
     Definimos como \textit{cuenca de atracción} de una raíz $a\in\C$ de una función compleja $f:\C\longrightarrow\C$ (\textit{i.e.} $f(a)=0$), y denotamos como $A(a)$ al conjunto de puntos $z_0\in\C$ tales que la sucesión $\{z_n\}$ dada por $z_{n+1}=N_f(z_n)$ converge a $a$ utilizando a $z_0$ como primer valor de la sucesión. 
 \end{definicion}
 
-Es decir, tenemos en este caso que
-$$
-A(-1)=\{z\in\C:\operatorname{Re}z<0\},
-$$
-$$
-A(1)=\{z\in\C:\operatorname{Re} z>0\}
-$$
-y sin embargo los puntos del eje $Y$ no convergen a ninguna de las raíces, siendo esta por tanto la frontera entre las dos cuencas de atracción y el conjunto invariante para $N_f$.
-
-\subsection{Caso $z^3-1$}
-
-Consideremos ahora la función compleja $f:\C\longrightarrow\C$ definida como $f(z)=z^3-1$, cuyas raíces son las raíces cúbicas de 1, es decir: $1, -\frac{1}{2}+\frac{\sqrt{3}}{2}i$ y $-\frac{1}{2}-\frac{\sqrt{3}}{2}i$. De nuevo seguimos la estrategia que hemos tomado en la sección \ref{subsection:cuencas-1}, dividir en píxeles una región del plano complejo y colorear dichos píxeles según distintos colores dependiendo de cuál sea su cuenca de atracción. De esta forma, cada cuenca de atracción será caracterizada por un único color. \textit{Mathematica} permite personalizar la función de color que se utiliza en estos gráficos, de forma que no solo es posible asociar un color, sino una tonalidad de gris mediante el uso del argumento \verb|ColorFunction|, asociandole el valor ``Rainbow", ``Graylevel", o personalizando nosotros mismos la función de coloreado, como veremos más adelante.
+En muchas de las funciones que trataremos ocurre que existen distintas cuencas de atracción y la distinción sobre a cuál de ellas pertenece cada punto del plano complejo es la que nos permitirá graficar imágenes fractales. Si aplicamos el mismo procedimiento antes descrito en el ejemplo \ref{ejemplo:cuencas-1} con otras funciones encontramos las imágenes \ref{fig:cuencas-raiz}.
 
 \begin{figure}[h]
-    \begin{tabular}{cc}
-      \includegraphics[scale=0.5]{./img/cuencas-2.png} &   \includegraphics[scale=0.5]{./img/cuencas-3.png} \\
-    (a) De colores & (b) En escala de grises \\[6pt]
+    \centering
+    \begin{tabular}{ccc}
+      \includegraphics[scale=0.33]{img/cuencas-color-1.png} &   \includegraphics[scale=0.31]{img/cuencas-color-2.png} &   \includegraphics[scale=0.33]{img/cuencas-color-3.png} \\
+    (a) $f(z)=z^6-1$ & (b) $f(z)=z^3-3^z$ & (c) $f(z)=z^5-z^3+z^2-4$ \\[6pt]
     \end{tabular}
-    \caption{Cuencas de atracción de $f(z)=z^3-1$}
-    \label{fig:cuencas-2}
+    \caption{Cuencas de atracción de distintas funciones coloreadas.}
+    \label{fig:cuencas-raiz}
 \end{figure}
 
-El resultado de este cálculo es el que se representa en las imagenes \ref{fig:cuencas-2}, que son realmente la misma con coloreado distinto. En estas imágenes podemos ahora sí ver el primer ejemplo de estructura fractal producido por la iteración. Observemos que las sucesiones de dos puntos muy próximos pueden converger a raíces distintas, por lo que este es un ejemplo de \textit{caos matemático}: pequeñas variaciones en las condiciones iniciales conducen a comportamientos muy diferentes.
-
-Otra posibilidad para representar estas imágenes es, en lugar de asociar un color a cada número complejo según la cuenca de atracción a la que perteneciente, evaluar la velocidad de convergencia, es decir, las iteraciones necesarias hasta alcanzar la raíz en cuestión. A partir de esa velocidad de convergencia asignamos un color más o menos intenso. El código necesario se muestra a continuación y el resultado en la imagen \ref{fig:cuencas-velocidad}.
+En estas imágenes podemos ahora sí ver los primeros ejemplos de estructuras fractales producidos por la iteración. Observemos que las sucesiones de dos puntos muy próximos pueden converger a raíces distintas, por lo que este es un ejemplo de \textit{caos matemático}: pequeñas variaciones en las condiciones iniciales conducen a comportamientos muy diferentes. Además, en lugar de colorear el plano según la raíz a la que converja la sucesión también podemos fijarnos en la velocidad de convergencia. Esto es, asociar a cada punto del plano un color dependiendo del número de iteraciones necesarias para converger a la raíz. En este sentido, podemos revisitar las imágenes \ref{fig:cuencas-raiz} y en función de la velocidad de convergencia de las sucesiones utilizar un color distinto. El código necesario es el siguiente y los resultados se pueden observar en las imágenes \ref{fig:cuencas-velocidad}:
 
 \begin{verbatim}
-newtonVelocidad = 
-  Compile[{{z, _Complex}}, 
-    Length[FixedPointList[iteracionN[f, #] &, z, 50]]];
-
-DensityPlot[newtonVelocidad[x + I*y], {x, -2, 2}, {y, -2, 2}, 
-  PlotPoints -> 200, Mesh -> False, ColorFunction -> GrayLevel]
+    newtonVelocidad = 
+      Compile[{{z, _Complex}}, 
+        Length[FixedPointList[iteracionN[f, #] &, z, 50]]];
+    
+    DensityPlot[newtonVelocidad[x + I*y], {x, -2, 2}, {y, -2, 2}, 
+      PlotPoints -> 200, Mesh -> False, ColorFunction -> GrayLevel]
 \end{verbatim}
 
-\begin{figure} [h]
-\centering
-\includegraphics[scale = 0.5]{img/cuencas-velocidad.png}
-\caption{Evaluación de la velocidad de convergencia a las raíces.}
+donde se puede cambiar el valor de \verb|f|, la región del plano \verb|{x, -2, 2}, {y, -2, 2}| o el valor del argumento \verb|ColorFunction| para obtener distintas imágenes.
+
+\begin{figure}[h]
+    \centering
+    \begin{tabular}{ccc}
+      \includegraphics[scale=0.33]{img/cuencas-velocidad-1.png} &   \includegraphics[scale=0.31]{img/cuencas-velocidad-2.png} &   \includegraphics[scale=0.33]{img/cuencas-velocidad-3.png} \\
+      (a) $f(z)=z^6-1$ & (b) $f(z)=z^3-3^z$ & (c) $f(z)=z^5-z^3+z^2-4$ \\[6pt]
+    \end{tabular}
+    \caption{Evaluación de la velocidad de convergencia en cada punto}
     \label{fig:cuencas-velocidad}
 \end{figure}
 
-Fijémonos además que si hacemos \textit{zoom} en ciertas partes de la imagen, es decir, representamos una región más pequeña, encontramos estructuras que son iguales independientemente del zoom que se aplique. En la figura \ref{fig:detalles} podemos ver distintos detalles de la figura \ref{fig:cuencas-velocidad}, cada una es una ampliación de la anterior, y podemos ver como esa estructura se repite en todas las escalas.
+Podemos jugar con estos parámetros como son la función a representar \verb|f|, la región del plano que queremos visualizar \verb|{x, -2, 2}, {y, -2, 2}| o el valor del argumento \verb|ColorFunction| para obtener distintas imágenes de diferentes colores.
+
+\subsection{Autosimilaridad}
+\label{subsection:autosimilaridad}
+
+Consideramos ahora la representación de las cuencas de atracción de la función compleja $f(z)=z^3-1$, que podemos ver en la imagen \ref{fig:cuencas-autosimilaridad}
+
+\begin{figure} [h]
+\centering
+\includegraphics[scale = 0.5]{img/cuencas-autosimilaridad.png}
+\caption{Cuencas de atracción de $f(z)=z^3-1$}
+    \label{fig:cuencas-autosimilaridad}
+\end{figure}
+
+Fijémonos además que si hacemos \textit{zoom} en ciertas partes de la imagen, es decir, representamos una región más pequeña, encontramos estructuras que son iguales independientemente del zoom que se aplique. En la figura \ref{fig:detalles} podemos ver distintos detalles de la figura \ref{fig:cuencas-autosimilaridad}, cada una es una ampliación de la anterior, y podemos ver como esa estructura se repite en todas las escalas.
 
 %\newpage
 
@@ -189,24 +198,8 @@ Fijémonos además que si hacemos \textit{zoom} en ciertas partes de la imagen, 
       \includegraphics[scale=0.33]{./img/detalle-1.png} &   \includegraphics[scale=0.33]{./img/detalle-2.png} &   \includegraphics[scale=0.33]{./img/detalle-3.png} \\
     (a) $[-1,0]\times[-0.5,0.5]$ & (b) $[-0.6,-0.4]\times[0.1,0.3]$ & (c) $[-0.5,-0.47]\times[0.215,0.245]$ \\[6pt]
     \end{tabular}
-    \caption{Diferentes regiones ampliadas de la figura \ref{fig:cuencas-velocidad}}
+    \caption{Diferentes regiones ampliadas de la figura \ref{fig:cuencas-autosimilaridad}}
     \label{fig:detalles}
 \end{figure}
 
-De manera natural, podemos aplicar esta misma teoría a cualquier otro tipo de funciones, como por ejemplo $z^n-1 (n\in\N\backslash\{0,1\})$, o incluso no polinómicas como $z^3-3^z$ o $z^2-2^z-1$ (véanse las imágenes \ref{fig:imagenes-finales}).
-
-\newpage
-
-\begin{figure}[h]
-    \centering
-    \begin{tabular}{cc}
-    \includegraphics[scale=0.5]{./img/cuencas-4.png} &   \includegraphics[scale=0.375]{./img/cuencas-5.png} \\
-    (a) Función $z^6-1$ & (b) Función $z^3-3^z$ \\[6pt]
-    \multicolumn{2}{c}{\includegraphics[scale=0.4]{./img/cuencas-6.png}} \\
-    \multicolumn{2}{c}{(c) Función $z^2-2^z-1$} \\
-    \multicolumn{2}{c}{\includegraphics[scale=0.4]{./img/cuencas-7.png}} \\
-    \multicolumn{2}{c}{(d) Función $z^5 - z^3 + z^2 - 4$} \\ 
-    \end{tabular}
-    \caption{Representaciones de cuencas de atracción de distintas funciones.}
-    \label{fig:imagenes-finales}
-\end{figure}
+Este aspecto es el que realmente nos define la naturaleza fractal de las cuencas de atracción, pues aunque las imágenes no son objetos totalmente autosimilares en el sentido de la definición \ref{def:autosimilaridad} si que contienen regiones que sí lo son, como es el caso que acabamos de describir.
