--- a/memoria/tex/capitulos/capitulo-2.tex
+++ b/memoria/tex/capitulos/capitulo-2.tex
@@ -100,7 +100,7 @@ Y a partir de la longitud de la lista que nos devuelve \verb|FixedPointList|, es
 
 \section{El método de Newton y cuencas de atracción}
 
-Gracias a la iteración y al estudio de la convergencia de las sucesiones que definen las órbitas, podemos definir muchos métodos numéricos que nos ayuden a resolver numéricamente problemas que de forma teórica o analítica serían difíciles de abordar. Entre estos está el conocido \textbf{método de Newton}. Este es un procedimiento iterativo que nos permite adivinar con cierta precisión donde se anula una función derivable (al menos en un entorno de la raíz), pudiendo así utilizarlo como herramienta para la resolución de ecuaciones. Existen varias y distintas versiones del método de Newton, siendo la más sencilla la que busca las raíces de una función real de variable real $f:\R\longrightarrow\R$, conociéndose también en este caso como \textit{método de Newton-Raphson}. Además, hay una generalización para aplicaciones $f:\R^n\longrightarrow\R^n$, la cual se apoya en la inversa del operador diferencial. Sin embargo, nosotros estamos trabajando con funciones complejas $f:\C\longrightarrow\C$, que aunque $\C$ y $\R^2$ sean isomorfos, la dinámica es distinta, pues si la función compleja es suficientemente buena, podemos usar su derivada $f'(z)$ y no el operador diferencial. 
+Gracias a la iteración y al estudio de la convergencia de las sucesiones que definen las órbitas, podemos definir muchos métodos numéricos que nos ayuden a resolver numéricamente problemas que de forma teórica o analítica serían difíciles de abordar. Entre estos está el conocido \textbf{método de Newton}. Este es un procedimiento iterativo que nos permite adivinar con cierta precisión donde se anula una función derivable (al menos en un entorno de la raíz), pudiendo así utilizarlo como herramienta para la resolución de ecuaciones. Existen varias y distintas versiones del método de Newton, siendo la más sencilla la que busca las raíces de una función real de variable real $f:\R\longrightarrow\R$, conociéndose también en este caso como \textit{método de Newton-Raphson}. Además, hay una generalización para aplicaciones $f:\R^n\longrightarrow\R^n$, la cual se apoya en la inversa del operador diferencial. Sin embargo, nosotros estamos trabajando con funciones complejas $f:\C\longrightarrow\C$, que aunque $\C$ y $\R^2$ sean isomorfos, la dinámica es distinta, pues si la función compleja es suficientemente buena, podemos usar su derivada $f'(z)$ y no el operador diferencial (véase \cite{Dubeau-Gnang}). 
 
 Recordemos que dada una ecuación $f(z)=0$ para cierta función compleja y analítica $f:\C\longrightarrow\C$, el método de Newton itera la función
 \begin{equation}
