--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -9,6 +9,7 @@
 \bibitem{Apuntes-AMI-Paya} Payá, R (2008). \textit{Apuntes de Análisis Matemático I}...
 \bibitem{Ostrowski} Ostrowski, A.M. (1973). \textit{Solution of equations in Euclidean and Banach spaces.} (3rd ed.). Academic Press.
 \bibitem{Atkinson} Atkinson, K; Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework} (3rd ed. 2009). Springer New York. \url{https://doi.org/10.1007/978-1-4419-0458-4}
+\bibitem{Dubeau-Gnang} Dubeau, F.; Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis, 2018}, 1–11. \url{https://doi.org/10.1155/2018/7289092}
 
 
 \end{thebibliography}
