Avances en capítulo 3 (#41)
Se ha redactado el capítulo 3 hasta definición de conjunto de Julia

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -98,6 +98,8 @@
 \chapter{Conjuntos de Julia y Mandelbrot}
 \label{chap:Julia-Mandelbrot}
 
+\import{tex/capitulos/}{capitulo-3.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
